--- a/DatingApp/client/src/app/nav/nav.component.html
+++ b/DatingApp/client/src/app/nav/nav.component.html
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
   <div class="container">
     <a class="navbar-brand" href="#">Dating App</a>
+
+    @if (loggedIn) {
     <ul class="navbar-nav me-auto mb-2 mb-md-0">
       <li class="nav-item">
         <a class="nav-link">Matches</a>
@@ -12,6 +14,18 @@
         <a class="nav-link">Messages</a>
       </li>
     </ul>
+    } @if (loggedIn) {
+    <div dropdown class="dropdown">
+      <a dropdownToggle class="dropdown-toggle text-light text-decoration-none"
+        >Welcome User</a
+      >
+      <div *dropdownMenu class="dropdown-menu">
+        <a class="dropdown-item">Edit Profile</a>
+        <div class="dropdown-divider"></div>
+        <a class="dropdown-item" (click)="logout()">Logout</a>
+      </div>
+    </div>
+    } @else {
     <form #loginForm="ngForm" (ngSubmit)="login()" class="d-flex">
       <input
         name="username"
@@ -28,5 +42,6 @@
       />
       <button class="btn btn-outline-success" type="submit">Login</button>
     </form>
+    }
   </div>
 </nav>
