--- a/DatingApp/client/src/app/nav/nav.component.html
+++ b/DatingApp/client/src/app/nav/nav.component.html
@@ -1,9 +1,9 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
   <div class="container">
     <a class="navbar-brand" routerLink="/">Dating App</a>
 
-    @if (true) {
     <ul class="navbar-nav me-auto mb-2 mb-md-0">
+      @if (accountService.currentUser()) {
       <li class="nav-item">
         <a routerLink="/members" routerLinkActive="active" class="nav-link"
           >Matches</a
@@ -19,11 +19,12 @@
           >Messages</a
         >
       </li>
+      }
     </ul>
-    } @if (accountService.currentUser()) {
+    @if (accountService.currentUser()) {
     <div dropdown class="dropdown">
       <a dropdownToggle class="dropdown-toggle text-light text-decoration-none"
-        >Welcome User</a
+        >Welcome, {{ accountService.currentUser()?.username  | titlecase }}</a
       >
       <div *dropdownMenu class="dropdown-menu">
         <a class="dropdown-item">Edit Profile</a>
@@ -46,7 +47,9 @@
         placeholder="Password"
         type="password"
       />
-      <button class="btn btn-outline-success" type="submit">Login</button>
+      <button class="btn btn-secondary my-2 my-sm-0" type="submit">
+        Login
+      </button>
     </form>
     }
   </div>
