--- a/DatingApp/client/src/app/members/member-details/member-details.component.html
+++ b/DatingApp/client/src/app/members/member-details/member-details.component.html
@@ -47,7 +47,12 @@
       </tab>
       <tab heading="Photos">
         <h4>Photos</h4>
-        <p>Photos will go here</p>
+        <gallery
+          [items]="images"
+          [thumbs]="true"
+          thumbPosition="bottom"
+          class="gallery"
+        ></gallery>
       </tab>
       <tab heading="Messages">
         <h4>Messages</h4>
