--- a/DatingApp/client/src/app/members/photo-editor/photo-editor.component.html
+++ b/DatingApp/client/src/app/members/photo-editor/photo-editor.component.html
@@ -3,7 +3,9 @@
   <div class="col-2">
     <img src="{{ photo.url }}" alt="photo of user" class="img-thumbnail mb-1" />
     <div class="text-center">
+      @if (photo.isMain) {
       <button class="btn btn-sm">Main</button>
+      }
       <button class="btn btn-sm btn-danger"><i class="fa fa-trash"></i></button>
     </div>
   </div>
