--- a/DatingApp/client/src/app/nav/nav.component.html
+++ b/DatingApp/client/src/app/nav/nav.component.html
@@ -28,6 +28,13 @@
     </ul>
     @if (accountService.currentUser()) {
     <div dropdown class="dropdown">
+      <img
+        class="me-2"
+        src="{{
+          accountService.currentUser()?.photoUrl || './assets/user.png'
+        }}"
+        alt="user main photo"
+      />
       <a dropdownToggle class="dropdown-toggle text-light text-decoration-none"
         >Welcome, {{ accountService.currentUser()?.username | titlecase }}</a
       >
@@ -37,6 +44,7 @@
         <a class="dropdown-item" (click)="logout()">Logout</a>
       </div>
     </div>
+    <div></div>
     } @else {
     <form #loginForm="ngForm" (ngSubmit)="login()" class="d-flex">
       <input
