--- a/DatingApp/client/src/app/register/register.component.html
+++ b/DatingApp/client/src/app/register/register.component.html
@@ -1,12 +1,11 @@
-<form #registerForm="ngForm" (ngSubmit)="register()">
+<form [formGroup]="registerForm" (ngSubmit)="register()">
   <h1 class="text-center text-primary">Sign Up</h1>
   <hr />
   <div class="mb-3 form-floating">
     <input
       type="text"
       class="form-control"
-      name="username"
-      [(ngModel)]="model.userName"
+      formControlName="username"
       placeholder="Username"
     />
     <label>Username</label>
@@ -15,11 +14,19 @@
     <input
       type="password"
       class="form-control"
-      name="password"
-      [(ngModel)]="model.password"
+      formControlName="password"
       placeholder="Password"
     />
     <label>Password</label>
+  </div>
+  <div class="mb-3 form-floating">
+    <input
+      type="password"
+      class="form-control"
+      formControlName="confirmPassword"
+      placeholder="Confirm Password"
+    />
+    <label>Confirm Password</label>
   </div>
   <div class="form-group text-center">
     <button class="btn btn-success me-2" type="submit">Register</button>
