--- a/DatingApp/client/src/app/register/register.component.html
+++ b/DatingApp/client/src/app/register/register.component.html
@@ -39,8 +39,13 @@
   <app-text-input
     [formControl]="$any(registerForm.controls['knownAs'])"
     [label]="'Known As'"
-  ></app-text-input
-  ><app-text-input
+  ></app-text-input>
+  <app-date-picker
+    [formControl]="$any(registerForm.controls['dateOfBirth'])"
+    [label]="'Date Of Birth'"
+    [maxDate]="maxDate"
+  ></app-date-picker>
+  <app-text-input
     [formControl]="$any(registerForm.controls['city'])"
     [label]="'City'"
   ></app-text-input
