--- a/DatingApp/client/src/app/nav/nav.component.html
+++ b/DatingApp/client/src/app/nav/nav.component.html
@@ -30,10 +30,8 @@
     <div dropdown class="dropdown">
       <img
         class="me-2"
-        src="{{
-          accountService.currentUser()?.photoUrl || './assets/user.png'
-        }}"
-        alt="user main photo"
+        src="{{ accountService.currentUser()?.photoUrl || '/user.png' }}"
+        alt="User main photo"
       />
       <a dropdownToggle class="dropdown-toggle text-light text-decoration-none"
         >Welcome, {{ accountService.currentUser()?.username | titlecase }}</a
