--- a/DatingApp/client/src/app/register/register.component.html
+++ b/DatingApp/client/src/app/register/register.component.html
@@ -53,13 +53,25 @@
     [formControl]="$any(registerForm.controls['country'])"
     [label]="'Country'"
   ></app-text-input>
+  @if(validationErrors.length > 0){
+  <div class="alert alert-danger">
+    <ul>
+      @for (error of validationErrors; track $index) {
+      <li>{{ error }}</li>
+      }
+    </ul>
+  </div>
+  }
   <div class="form-group text-center">
-    <button class="btn btn-success me-2" type="submit">Register</button>
+    <button
+      [disabled]="!registerForm.valid"
+      class="btn btn-success me-2"
+      type="submit"
+    >
+      Register
+    </button>
     <button class="btn btn-danger me-2" (click)="cancel()" type="button">
       Cancel
     </button>
   </div>
 </form>
-
-<p>Form value: {{ registerForm.value | json }}</p>
-<p>Form status: {{ registerForm.status | json }}</p>
