--- a/DatingApp/client/src/app/members/member-list/member-list.component.html
+++ b/DatingApp/client/src/app/members/member-list/member-list.component.html
@@ -1,4 +1,49 @@
 <div class="row">
+  <div class="text-center mt-3">
+    <h2>Your Matches - {{ this.memberService.paginationResult()?.items }}</h2>
+  </div>
+  <div class="containter mt-3">
+    <form #form="ngForm" class="d-flex mb-3" (submit)="displayMembers()">
+      <div class="d-flex mx-2">
+        <label class="col-form-label">Age from:</label>
+        <input
+          type="number"
+          class="form-control ms-1"
+          style="width: 70px"
+          name="minAge"
+          [(ngModel)]="userParams.minAge"
+        />
+      </div>
+      <div class="d-flex mx-2">
+        <label class="col-form-label">Age to:</label>
+        <input
+          type="number"
+          class="form-control ms-1"
+          style="width: 70px"
+          name="maxAge"
+          [(ngModel)]="userParams.maxAge"
+        />
+      </div>
+      <div class="d-flex mx-2">
+        <label class="col-form-label">Gender</label>
+        <select
+          name="gender"
+          style="width: 130px"
+          class="form-select ms-1"
+          [(ngModel)]="userParams.gender"
+        >
+          @for (gender of genderList; track gender.value) {
+          <option [value]="gender.value">{{ gender.display }}</option>
+          }
+        </select>
+      </div>
+      <button class="btn btn-primary ms-1" type="submit">Apply Filters</button>
+      <button class="btn btn-info ms-1" type="button" (click)="resetFilters()">
+        Reset Filters
+      </button>
+    </form>
+  </div>
+
   @for (member of memberService.paginationResult()?.items; track member.id) {
   <div class="col-2">
     <app-member-card [member]="member"></app-member-card>
