--- a/DatingApp/client/src/app/nav/nav.component.html
+++ b/DatingApp/client/src/app/nav/nav.component.html
@@ -34,7 +34,7 @@
         alt="User main photo"
       />
       <a dropdownToggle class="dropdown-toggle text-light text-decoration-none"
-        >Welcome, {{ accountService.currentUser()?.username | titlecase }}</a
+        >Welcome, {{ accountService.currentUser()?.knownAs }}</a
       >
       <div *dropdownMenu class="dropdown-menu">
         <a class="dropdown-item" routerLink="member/edit">Edit Profile</a>
