--- a/DatingApp/client/src/app/members/member-list/member-list.component.html
+++ b/DatingApp/client/src/app/members/member-list/member-list.component.html
@@ -13,7 +13,7 @@
           class="form-control ms-1"
           style="width: 70px"
           name="minAge"
-          [(ngModel)]="userParams.minAge"
+          [(ngModel)]="memberService.userParams().minAge"
         />
       </div>
       <div class="d-flex mx-2">
@@ -23,7 +23,7 @@
           class="form-control ms-1"
           style="width: 70px"
           name="maxAge"
-          [(ngModel)]="userParams.maxAge"
+          [(ngModel)]="memberService.userParams().maxAge"
         />
       </div>
       <div class="d-flex mx-2">
@@ -32,7 +32,7 @@
           name="gender"
           style="width: 130px"
           class="form-select ms-1"
-          [(ngModel)]="userParams.gender"
+          [(ngModel)]="memberService.userParams().gender"
         >
           @for (gender of genderList; track gender.value) {
           <option [value]="gender.value">{{ gender.display }}</option>
@@ -51,7 +51,7 @@
             name="orderBy"
             (click)="displayMembers()"
             btnRadio="lastActive"
-            [(ngModel)]="userParams.orderBy"
+            [(ngModel)]="memberService.userParams().orderBy"
           >
             Last Active
           </button>
@@ -61,7 +61,7 @@
             name="orderBy"
             (click)="displayMembers()"
             btnRadio="created"
-            [(ngModel)]="userParams.orderBy"
+            [(ngModel)]="memberService.userParams().orderBy"
           >
             Created
           </button>
@@ -86,6 +86,9 @@
     "
     (pageChanged)="pageChanged($event)"
     [maxSize]="10"
+    [(ngModel)]="
+      (memberService.paginationResult()?.pagination)!.currentPageNumber
+    "
     previousText="&lsaquo;"
     nextText="&rsaquo;"
     firstText="&laquo;"
