--- a/DatingApp/client/src/app/lists/lists.component.html
+++ b/DatingApp/client/src/app/lists/lists.component.html
@@ -1,1 +1,40 @@
-<p>lists works!</p>
+<div class="text-center mt-3">
+  <h2>{{ getTitle() }}</h2>
+</div>
+<div class="container mt-3">
+  <div class="d-flex">
+    <div class="btn-group">
+      <button
+        class="btn btn-primary"
+        btnRadio="liked"
+        [(ngModel)]="predicate"
+        (click)="showLikes()"
+      >
+        Members I like
+      </button>
+      <button
+        class="btn btn-primary"
+        btnRadio="likedBy"
+        [(ngModel)]="predicate"
+        (click)="showLikes()"
+      >
+        Members Who Like Me
+      </button>
+      <button
+        class="btn btn-primary"
+        btnRadio="mutual"
+        [(ngModel)]="predicate"
+        (click)="showLikes()"
+      >
+        Mutual Likes With Members
+      </button>
+    </div>
+  </div>
+  <div class="row mt-3">
+    @for (member of members; track member.id) {
+    <div class="col-2">
+      <app-member-card [member]="member"> </app-member-card>
+    </div>
+    }
+  </div>
+</div>
