Displayed the messages in the client

--- a/DatingApp/client/src/app/messages/messages.component.html
+++ b/DatingApp/client/src/app/messages/messages.component.html
@@ -1,1 +1,4 @@
-<p>messages works!</p>
+@for (message of this.messagesService.paginatationResult()?.items; track
+message.id) {
+<p>{{ message.content }}</p>
+}
