--- a/DatingApp/client/src/app/messages/messages.component.html
+++ b/DatingApp/client/src/app/messages/messages.component.html
@@ -1,4 +1,93 @@
-@for (message of this.messagesService.paginatationResult()?.items; track
-message.id) {
-<p>{{ message.content }}</p>
+<div class="container mt-3">
+  <div class="d-flex">
+    <div class="btn-group">
+      <button
+        class="btn btn-primary"
+        btnRadio="Unread"
+        [(ngModel)]="container"
+        (click)="showMessages()"
+      >
+        Unread
+      </button>
+      <button
+        class="btn btn-primary"
+        btnRadio="Inbox"
+        [(ngModel)]="container"
+        (click)="showMessages()"
+      >
+        Inbox
+      </button>
+      <button
+        class="btn btn-primary"
+        btnRadio="Outbox"
+        [(ngModel)]="container"
+        (click)="showMessages()"
+      >
+        Outbox
+      </button>
+    </div>
+  </div>
+</div>
+@if (!messagesService.paginationResult()?.items) {
+<h3>No messages found</h3>
+}@else{
+<table class="table table-hover mt-3" style="cursor: pointer">
+  <thead>
+    <tr>
+      <th style="width: 40%">Message</th>
+      <th style="width: 20%">From / To</th>
+      <th style="width: 20%">Sent / Received</th>
+      <th style="width: 20%"></th>
+    </tr>
+  </thead>
+  <tbody class="align-middle">
+    @for (message of this.messagesService.paginationResult()?.items; track
+    message.id) {
+    <tr routerLink="{{ getRoute(message) }}">
+      <td>{{ message.content }}</td>
+      <td>
+        <div>
+          <img
+            class="rounded-circle me-2"
+            [src]="
+              container === 'Outbox'
+                ? message.recipientPhotoUrl || '/user.png'
+                : message.senderPhotoUrl || '/user.png'
+            "
+            alt="image of user"
+          />
+          <strong>{{
+            container === "Outbox"
+              ? message.recipientUsername
+              : message.senderUsername
+          }}</strong>
+        </div>
+      </td>
+      <td>{{ message.messageSent | timeAgoCustom }}</td>
+      <td><button class="btn btn-danger">Delete</button></td>
+    </tr>
+
+    }
+  </tbody>
+</table>
+} @if (messagesService.paginationResult()?.pagination) {
+<div class="d-flex justify-content-center">
+  <pagination
+    [boundaryLinks]="true"
+    [totalItems]="(messagesService.paginationResult()?.pagination)!.totalItems"
+    [itemsPerPage]="
+      (messagesService.paginationResult()?.pagination)!.itemsPerPage
+    "
+    (pageChanged)="pageChanged($event)"
+    [maxSize]="10"
+    [(ngModel)]="
+      (messagesService.paginationResult()?.pagination)!.currentPageNumber
+    "
+    previousText="&lsaquo;"
+    nextText="&rsaquo;"
+    firstText="&laquo;"
+    lastText="&raquo;"
+  >
+  </pagination>
+</div>
 }
