--- a/DatingApp/client/src/app/members/member-details/member-details.component.html
+++ b/DatingApp/client/src/app/members/member-details/member-details.component.html
@@ -1,4 +1,3 @@
-@if (member) {
 <div class="row">
   <div class="col-4">
     <div class="card">
@@ -28,7 +27,9 @@
       <div class="card-footer">
         <div class="btn-group d-flex">
           <button class="btn btn-primary">Like</button>
-          <button class="btn btn-success">Message</button>
+          <button class="btn btn-success" (click)="selectTab('Messages')">
+            Message
+          </button>
         </div>
       </div>
     </div>
@@ -67,4 +68,4 @@
     </tabset>
   </div>
 </div>
-}
+
