--- a/DatingApp/client/src/app/messages/messages.component.html
+++ b/DatingApp/client/src/app/messages/messages.component.html
@@ -43,7 +43,10 @@
   <tbody class="align-middle">
     @for (message of this.messagesService.paginationResult()?.items; track
     message.id) {
-    <tr routerLink="{{ getRoute(message) }}">
+    <tr
+      routerLink="{{ getRoute(message) }}"
+      [queryParams]="{ tab: 'Messages' }"
+    >
       <td>{{ message.content }}</td>
       <td>
         <div>
