Messages can now be sent in the client

--- a/DatingApp/client/src/app/members/member-details/member-details.component.html
+++ b/DatingApp/client/src/app/members/member-details/member-details.component.html
@@ -63,9 +63,9 @@
         <app-member-messages
           [username]="member.username"
           [messages]="messages"
+          (updateMessages)="onUpdateMessages($event)"
         ></app-member-messages>
       </tab>
     </tabset>
   </div>
 </div>
-
