--- a/DatingApp/client/src/app/members/member-messages/member-messages.component.html
+++ b/DatingApp/client/src/app/members/member-messages/member-messages.component.html
@@ -41,15 +41,24 @@
     }
   </div>
   <div class="card-footer">
-    <form>
+    <form #messageForm="ngForm" (ngSubmit)="sendMessage()">
       <div class="input-group">
         <input
+          name="messageContent"
           type="text"
+          required
           class="form-control input-sm"
           placeholder="Send a message"
+          [(ngModel)]="messageContent"
         />
         <div class="input-group-append">
-          <button class="btn btn-primary" type="submit">Send</button>
+          <button
+            [disabled]="!messageForm.valid"
+            class="btn btn-primary"
+            type="submit"
+          >
+            Send
+          </button>
         </div>
       </div>
     </form>
