--- a/DatingApp/client/src/app/messages/messages.component.html
+++ b/DatingApp/client/src/app/messages/messages.component.html
@@ -66,7 +66,11 @@ messagesService.paginationResult()?.items?.length===0) {
         </div>
       </td>
       <td>{{ message.messageSent | timeAgoCustom }}</td>
-      <td><button class="btn btn-danger">Delete</button></td>
+      <td (click)="$event.stopPropagation()">
+        <button (click)="deleteMessage(message.id)" class="btn btn-danger">
+          Delete
+        </button>
+      </td>
     </tr>
 
     }
