--- a/DatingApp/client/src/app/nav/nav.component.html
+++ b/DatingApp/client/src/app/nav/nav.component.html
@@ -20,7 +20,11 @@
         >
       </li>
       <li class="nav-item">
-        <a routerLink="/admin" routerLinkActive="active" class="nav-link"
+        <a
+          *appHasRole="['Admin', 'Moderator']"
+          routerLink="/admin"
+          routerLinkActive="active"
+          class="nav-link"
           >Admin</a
         >
       </li>
