Added a bs modal

--- a/DatingApp/client/src/app/admin/user-management/user-management.component.html
+++ b/DatingApp/client/src/app/admin/user-management/user-management.component.html
@@ -16,7 +16,11 @@
         <td>
           {{ user.roles }}
         </td>
-        <td><button class="btn btn-info">Edit Roles</button></td>
+        <td>
+          <button (click)="openRolesModal()" class="btn btn-info">
+            Edit Roles
+          </button>
+        </td>
       </tr>
 
       }
