Implemented roles editing by the admin in the client

--- a/DatingApp/client/src/app/admin/user-management/user-management.component.html
+++ b/DatingApp/client/src/app/admin/user-management/user-management.component.html
@@ -17,7 +17,7 @@
           {{ user.roles }}
         </td>
         <td>
-          <button (click)="openRolesModal()" class="btn btn-info">
+          <button (click)="openRolesModal(user)" class="btn btn-info">
             Edit Roles
           </button>
         </td>
