--- a/DatingApp/client/src/app/admin/photo-management/photo-management.component.html
+++ b/DatingApp/client/src/app/admin/photo-management/photo-management.component.html
@@ -1,1 +1,28 @@
-<p>photo-management works!</p>
+<div class="row">
+  @for (photo of photos; track photo.id) { @if(!photo.isApproved){
+  <div class="col-2">
+    <div class="card-img-wrapper">
+      <h4 class="mt-2">{{ photo.username }}</h4>
+      <img
+        class="photo-moderate img-thumbnail mb-1"
+        src="{{ photo.url }}"
+        alt="user photo"
+      />
+    </div>
+    <div class="d-flex w-90">
+      <button
+        class="btn btn-sm btn-success me-3 w-40"
+        (click)="approvePhoto(photo.id)"
+      >
+        Approve
+      </button>
+      <button
+        class="btn btn-sm btn-danger w-40"
+        (click)="rejectPhoto(photo.id)"
+      >
+        Reject
+      </button>
+    </div>
+  </div>
+  } }
+</div>
