--- a/DatingApp/client/src/app/members/photo-editor/photo-editor.component.css
+++ b/DatingApp/client/src/app/members/photo-editor/photo-editor.component.css
@@ -1,3 +1,17 @@
 .nv-file-over {
   border: dotted 3px red;
 }
+
+.testing {
+  position: relative;
+}
+.approval {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: red;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+}
