--- a/DatingApp/client/src/app/members/photo-editor/photo-editor.component.html
+++ b/DatingApp/client/src/app/members/photo-editor/photo-editor.component.html
@@ -1,11 +1,21 @@
 <div class="row">
   @for (photo of member().photos; track photo.id) {
-  <div class="col-2">
-    <img src="{{ photo.url }}" alt="photo of user" class="img-thumbnail mb-1" />
+  <div class="col-2 testing">
+    <img
+      src="{{ photo.url }}"
+      alt="photo of user"
+      class="img-thumbnail mb-1"
+      [style.opacity]="photo.isApproved ? '1' : '0.2'"
+    />
+    @if(!photo.isApproved){
+    <div class="approval">
+      <p>Awaiting approval</p>
+    </div>
+    }
     <div class="text-center">
       <button
         class="btn btn-sm me-1"
-        [disabled]="photo.isMain"
+        [disabled]="photo.isMain || !photo.isApproved"
         (click)="setMainPhoto(photo)"
         [ngClass]="photo.isMain ? 'btn-success active' : 'btn-outline-success'"
       >
