--- a/DatingApp/client/src/app/nav/nav.component.html
+++ b/DatingApp/client/src/app/nav/nav.component.html
@@ -6,12 +6,12 @@
       @if (accountService.currentUser()) {
       <li class="nav-item">
         <a routerLink="/members" routerLinkActive="active" class="nav-link"
-          >Matches</a
+          >Members</a
         >
       </li>
       <li class="nav-item">
         <a routerLink="/lists" routerLinkActive="active" class="nav-link"
-          >Lists</a
+          >Matches</a
         >
       </li>
       <li class="nav-item">
@@ -48,7 +48,7 @@
       <div *dropdownMenu class="dropdown-menu">
         <a class="dropdown-item" routerLink="member/edit">Edit Profile</a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item" (click)="logout()">Logout</a>
+        <a class="dropdown-item" routerLink="/" (click)="logout()">Logout</a>
       </div>
     </div>
     <div></div>
