--- a/DatingApp/client/src/app/members/member-card/member-card.component.html
+++ b/DatingApp/client/src/app/members/member-card/member-card.component.html
@@ -14,11 +14,13 @@
           <i class="fa fa-user"></i>
         </button>
       </li>
+      @if (!hasMutualLike()) {
       <li class="list-inline-item">
-        <button (click)="toggleLike()" class="btn btn-primary ">
+        <button (click)="toggleLike()" class="btn btn-primary">
           <i class="fa fa-heart"></i>
         </button>
       </li>
+      } @if(hasMutualLike()){
       <li class="list-inline-item">
         <button
           routerLink="/members/{{ member().username }}"
@@ -28,6 +30,7 @@
           <i class="fa fa-envelope"></i>
         </button>
       </li>
+      }
     </ul>
   </div>
   <div class="card-body p-1">
