--- a/DatingApp/client/src/app/nav/nav.component.html
+++ b/DatingApp/client/src/app/nav/nav.component.html
@@ -29,7 +29,11 @@
         >
       </li>
       <li class="nav-item">
-        <a routerLink="/errors" routerLinkActive="active" class="nav-link"
+        <a
+          *appHasRole="['Admin', 'Moderator']"
+          routerLink="/errors"
+          routerLinkActive="active"
+          class="nav-link"
           >Errors</a
         >
       </li>
